# antevorta

./: .gitignore  README.md  pyproject.toml
antevorta/: __init__.py  __main__.py  cli.py  config.py  events.py  export.py  factors.py  grid.py  io.py  model.py  project.py  spatial.py  validation.py
antevorta/core/: config.py  grid.py  io.py  storage.py
antevorta/features/: __init__.py  dataset.py  events.py  factors.py
antevorta/ingest/: __init__.py  aoi.py  events.py  factors.py
antevorta/model/: __init__.py  baseline.py
antevorta/templates/: project.yaml
antevorta/tests/: test_events.py  test_grid.py  test_model.py  test_validation.py
app/: antevorta.py
projects/dc_demo/: aoi.geojson  canopy.geojson  events.geojson  project.yaml
template/: index.html
