[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antevorta"
version = "0.1.0"
description = "Antevorta spatial risk model MVP"
requires-python = ">=3.10"
dependencies = [
  "geopandas>=0.14",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=15.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "shapely>=2.0",
]

[project.scripts]
antevorta = "antevorta.cli:main"

[tool.setuptools]
packages = ["antevorta", "antevorta.core", "antevorta.ingest", "antevorta.features", "antevorta.model"]

[tool.setuptools.package-data]
antevorta = ["templates/*.yaml"]
