[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antevorta"
version = "0.1.0"
description = "Deterministic CLI prototype for geospatial event likelihood modeling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "geopandas>=1.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "rasterio>=1.3",
  "scikit-learn>=1.5",
  "shapely>=2.0",
]

[project.scripts]
antevorta = "antevorta.cli:main"

[tool.setuptools]
packages = ["antevorta"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["antevorta/tests"]
addopts = "-q"
